--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.28.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@zeit/next-sass": "^1.0.1",
+    "md-editor-rt": "^1.5.0",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "sass": "^1.49.7"
   },
