--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.28.2",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@zeit/next-sass": "^1.0.1",
+    "amfe-flexible": "^2.2.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.1.0",
     "loadsh": "^0.0.4",
+    "markdown-navbar": "^1.4.3",
     "md-editor-rt": "^1.5.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.34.16",
+    "react-virtual": "^2.10.4",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@types/markdown-navbar": "^1.4.0",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
