--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.28.2",
+    "@fingerprintjs/fingerprintjs-pro-react": "^1.3.1",
     "@reduxjs/toolkit": "^1.8.3",
-    "@types/md5": "^2.3.2",
+    "@types/debounce": "^1.2.1",
+    "@types/react-lazyload": "^3.2.0",
     "@types/react-virtualized": "^9.21.21",
     "@zeit/next-sass": "^1.0.1",
     "amfe-flexible": "^2.2.1",
     "base-64": "^1.0.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.1",
+    "debounce": "^1.2.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.1.0",
     "loadsh": "^0.0.4",
     "markdown-navbar": "^1.4.3",
     "md-editor-rt": "^1.5.0",
-    "md5": "^2.3.0",
     "nanoid": "^4.0.0",
     "next": "12.0.10",
+    "next-useragent": "^2.8.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.34.16",
     "react-redux": "^8.0.2",
